<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="actionbar_title_map_view">I\'m Hungry</string>
    <string name="actionbar_title_list_view">I\'m Hungry</string>
    <string name="actionbar_title_workmates">Available workmates</string>

    <string name="title_alertDialog_google_play_service"> ERROR !!</string>
    <string name="message_alertDialog_google_play_service_download"> Please download the google play service</string>
    <string name="message_alertDialog_google_play_service_update"> Please update your google play service</string>

    <string name="tabItem1">Map View</string>
    <string name="tabItem2">List View</string>
    <string name="tabItem3">Workmates</string>
    <string name="sideview1"> YOUR LUNCH </string>
    <string name="sideview2"> SETTINGS </string>
    <string name="sideview3"> LOGOUT </string>

    <string name="facebook_application_id">947763842588942</string>
    <string name="fb_login_protocol_scheme">fb947763842588942</string>

    <string name="your_lunch"> sorry you haven\'t chosen a restaurant yet</string>
    <string name="search_hint_restaurant"> Name of restaurant </string>
    <string name="search_hint_workmates"> Name of workmate </string>

    <string name="workmate_is_eating"> is eating </string>
    <string name="workmate_has_not_decided_yet"> hasn\'t decided yet </string>
    <string name="workmate_is_joining"> is joining ! </string>
    <string name="no_workmates"> NO WORKMATES </string>

    <string name="title_message_map_view"> We are Sorry </string>
    <string name="message_map_view"> We need to acces to your location to show you the map.\nDo you want to grant us this permission</string>
    <string name="button_message_map_view"> OK</string>

    <string name="title_alertDialog_permission"> We are Sorry </string>
    <string name="message_alertDialog_permission"> We need to acces to your location to show you the map.\nDo you want to grant us this permission.</string>
    <string name="positive_button_alertDialog_permission"> OK</string>

    <string name="title_alertDialog_error_location"> We are Sorry </string>
    <string name="message_alertDialog_error_location"> We were unable to locate you</string>

    <string name="restaurant_data_no_location">No Location</string>
    <string name="restaurant_data_open"> Open </string>
    <string name="restaurant_data_open_until"> Open until </string>
    <string name="restaurant_data_open_24h"> Open 24h/24 </string>
    <string name="restaurant_data_open_24h7j"> Open 24/7 </string>
    <string name="restaurant_data_close"> Close </string>
    <string name="restaurant_data_no_data"> No data </string>
    <string name="no_restaurant"> NO RESTAURANT </string>

    <string name="detail_call"> CALL </string>
    <string name="detail_like"> LIKE </string>
    <string name="detail_website"> WEBSITE </string>

    <string name="no_website"> No Website Available</string>
    <string name="no_phone_number"> No phone number available</string>

    <string name="explain_call"> Sorry, we need your permission to call </string>
    <string name="you_like_it"> You like it </string>
    <string name="you_not_like_it"> You don\'t like it </string>

    <string name="notification_channel_name"> Go4Lunch</string>
    <string name="notification_channel_description"> it\'s lunch time</string>
    <string name="notification_title"> Go4Lunch </string>
    <string name="notification_title_no_restaurant"> Where to eat ? </string>
    <string name="notification_content_no_restaurant"> you still have time to decide</string>
    <string name="notification_content_no_workmates"> No workmates </string>
    <string name="notification_new_alarm"> New alarm at </string>

    <string name="no_prediction">No result found</string>
    <string name="no_connection">No connection available</string>

    <string name="setting_text_language"> Language </string>
    <string name="setting_text_account"> Account </string>
    <string name="setting_text_remove_account"> Remove Account </string>
    <string name="setting_text_notification_no_restaurant"> Notification when you didn\'t choose a restaurant </string>
    <string name="setting_text_notification_restaurant"> Notification to remind you to go to restaurant </string>

    <string name="setting_account_title_alert"> Remove Account </string>
    <string name="setting_account_message_alert"> Are you sure you want to delete your account ? </string>
    <string name="setting_account_button_alert"> remove </string>

    <string name="setting_title_time_picker_no_restaurant"> Remind you to book a restaurant at : </string>
    <string name="setting_message_time_picker_no_restaurant"> (default value : 11H00) </string>
    <string name="setting_title_time_picker_restaurant"> Notification to go to a restaurant at : </string>
    <string name="setting_message_time_picker_restaurant"> (default value : 12H00) </string>
    <string name="setting_save_time_picker"> Save </string>
    <string name="setting_default_time_picker"> default </string>

    <string name="shared_preference_username"> USERNAME </string>
    <string name="shared_preference_hour_no_restaurant"> HOUR NO RESTAURANT </string>
    <string name="shared_preference_minutes_no_restaurant"> MINUTES NO RESTAURANT </string>
    <string name="shared_preference_hour_restaurant"> HOUR RESTAURANT </string>
    <string name="shared_preference_minutes_restaurant"> MINUTES RESTAURANT </string>
    <string name="shared_preference_language"> LANGUAGE </string>
    <string name="shared_preference_theme"> THEME </string>


    <string-array name="language">
        <item>English</item>
        <item>French</item>
    </string-array>

    <string-array name="language_key">
        <item> en </item>
        <item> fr </item>
    </string-array>

    <string name="preferences_theme"> Theme </string>
    <string name="preferences_dark_theme"> Dark theme </string>
    <string name="preferences_light_theme"> Light theme </string>
    <string name="preferences_general"> General </string>
    <string name="preferences_languages"> Languages </string>
    <string name="preferences_personal"> Personal information </string>
    <string name="preferences_name"> Name </string>
    <string name="preferences_your_actual_name"> Your actual name is </string>
    <string name="preferences_notification"> Notifications </string>
    <string name="preferences_notification_no_restaurant"> Remind you to book a restaurant at : </string>
    <string name="preferences_notification_restaurant"> Remind you to go a to the restaurant at : </string>
    <string name="preferences_account"> Account </string>
    <string name="preferences_remove_account"> Remove account </string>

    <string name="chat_send_button"> Send </string>
    <string name="chat_with_user"> Chat with </string>
    <string name="chat_for_restaurant"> Restaurant : </string>
    <string name="chat_message_info"> send : </string>
    <string name="chat_message_delete_by"> message delete by:</string>
    <string name="chat_copy_paste_toast"> text copied to clipboard</string>

    <string name="chat_title_alert_dialog_delete"> Delete message </string>
    <string name="chat_message_alert_dialog_delete"> Are you sure you want to delete this message ? </string>
    <string name="chat_positive_alert_dialog_delete"> DELETE </string>
    <string name="chat_negative_alert_dialog_delete"> CANCEL </string>

</resources>