...
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_text_information_start"
            android:layout_marginTop="@dimen/margin_text_information_top"
            android:layout_toEndOf="@+id/profile_picture_header_side_view"
            >
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

...
